# Copyright © 2025 Wenze Wei. All Rights Reserved.
#
# This file is part of DMS.
# The DMS project belongs to the Dunimd Team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "dms-core"
version = "0.1.2"
description = "Dunimd Middleware Service - A high-performance Rust middleware framework with modular architecture"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dunimd Team", email = "dunimd@outlook.com"}
]
maintainers = [
    {name = "Dunimd Team", email = "dunimd@outlook.com"}
]
keywords = ["middleware", "framework", "distributed", "async", "microservices", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://gitee.com/dunimd/dms"
Documentation = "https://gitee.com/dunimd/dms"
Repository = "https://gitee.com/dunimd/dms"
"Bug Tracker" = "https://gitee.com/dunimd/dms/issues"

[tool.setuptools]
packages = ["dms_core"]

[tool.setuptools-rust]
extensions = [
    {target = "dms_core.dms_core", path = "../Cargo.toml", features = ["pyo3"], binding = "pyo3"}
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.950",
]